--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 
                   <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s" style="visibility: visible; animation-delay: 0.1s; animation-name: bounceIn;"></i>
                     <br>
-                    <h3 class="text-faded"><b><a href="mailto:mohandeveloper547@gmail.com">mohandeveloper547@gmail.com</a></b></h3>
+                    <h3 class="text-faded"><b><a href="mailto:mohandeveloper547@gmail.com">muralimobileappdev@gmail.com</a></b></h3>
                 </div>
             </div>
         </div>
