--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 
     <section class="copyrightclass">
         <center>
-            <a href="https://www.linkedin.com/in/murali-mohan-045595133">
+            <a href="www.linkedin.com/in/murali-m-217958135">
             <img src="img/linkedin.png" style="margin:10px">
             </a>
             <a href="https://github.com/murali5347">
