changes made in resume field

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             <div class="call-to-action">
                 <h2>My Resume</h2>
                 <hr class="light">
-                <a href="img/Murali.pdf" class="btn btn-default btn-xl wow tada"> Click here!</a>
+                <a href="img/MURALI.pdf" class="btn btn-default btn-xl wow tada"> Click here!</a>
             </div>
         </div>
     </aside>
